Main nav items horizontal spacing is fixed.

--- a/ArgentBank-FrontEnd/src/css/main.css
+++ b/ArgentBank-FrontEnd/src/css/main.css
@@ -56,6 +56,10 @@ body {
   margin-right: 0.5rem;
 }
 
+.main-nav-item-user {
+  margin-right: 12.5px;
+}
+
 .main-nav-item:hover {
   text-decoration: underline;
 }
@@ -68,6 +72,14 @@ body {
 .main-nav-logo-image {
   max-width: 100%;
   width: 200px;
+}
+
+.fa-user-circle {
+  margin-right: 5px;
+}
+
+.fa-sign-out {
+  margin-right: 5px;
 }
 
 .hero {
